2001-05-31  Martin Baulig  <baulig@suse.de>

	* gnome-selector.c: Implemented the new CORBA API.

	* gnome-selector.h (GnomeSelectorClass): Renamed "clear" to "clear_uri_list",
	added "scan_directory" and added `gboolean directory_ok' to "check_uri".
	(gnome_selector_scan_uri, gnome_selector_set_directory_filter): New functions.

	* gnome-async-context.c
	(GnomeAsyncFunc): Added `gboolean completed' and `const BonoboArg *result'.
	(gnome_async_context_get_handle_by_id): New function.
	(gnome_async_handle_set_result): New function.
	(gnome_async_handle_call_async_func): New function.
	(gnome_async_handle_get_id): New function.

	* gnome-file-selector.[ch]: Derive from GnomeDirectoryFilter.

	* gnome-selector-dialog.[ch]: Removed.

2001-05-25  Martin Baulig  <baulig@suse.de>

	* gnome-selector.[ch]: Merged `check_filename' and `check_directory'
	into `check_uri' and `add_file' and `add_directory' into `add_uri'.

2001-05-25  Martin Baulig  <baulig@suse.de>

	* gnome-async-context.h (GNOME_ASYNC_TYPE_*): Removed.

2001-05-25  Martin Baulig  <baulig@suse.de>

	* gnome-selector.h, gnome-selectorP.h: Moved the async stuff to
	gnome-async-context.[ch].

	* gnome-async-context.[ch]: New files.

	* gnome-directory-filter.[ch]: New files.

2001-05-23  Martin Baulig  <baulig@suse.de>

	* gnome-selector-factory.c (create_selector_handler): Read values
	from the PropertyBag and set the GObject properties.

Mon May 21 23:12:04 2001  George Lebl <jirka@5z.com>

	* gnome-ditem.[ch]: wipe all the standard incomformat stuff, clean
	  up a little bit and start on supporting the standard.  Currently
	  compiles but doesn't all work, that is launching doesn't work.
	  Also wipe all KDE vs. GNOME stuff, now the entry is converted to
	  standard upon load, making life easier on the rest of the functions

2001-05-21  Martin Baulig  <baulig@suse.de>

	* gnome-selector-factory.c: Create a BonoboItemHandler so that
	you can create a new GnomeSelector entirely with monikers.
